apps/iot/esphome/overlays/iot/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: esphome-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:7u2yga+0yC3c6B3eroWoMt+iIXjE6NQyCRZmjwwJ,iv:nT8uz36dm0b9TUdzoSz6nG+Uyzxco5c/nf8L/qUGK2c=,tag:TylizlbM7vvkh7Zpjk2MTA==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:4PlPCavnYOhmTLaDZ2OoyScYnxjedYZFnbhDlY6g,iv:PjiVYiBvKzNONLHFQvr83OeyQ45LgnYMReYxJ9ovKA8=,tag:su63ZfU+DYABnPx0D/kSvg==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxMG81aU1TZDVQckVidXAv
[...]
            kEvue1uFOiNmThvSYFZhSSwcrJ/z+BMa4BjmbnsCheKcZiDyZnsrig==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:44:20Z"
    mac: ENC[AES256_GCM,data:+EMaP1Ji3T88C6K6QYV3xA3aoo0DjO1cAFqpHN8r7tYWu/lluwBdp+0SMLpNzipR8fAKNt8Ya6bxDwrUwR8aNQhwxCbL05siTYI8PYjB8AY1qNkF1JCDFwLw06cjy5nKKckjlPCbV1oOR3wxTYoPD4gzz3m9WN+tXqQAJbZG8qk=,iv:L9aCM1j/4MeriTkGS88hMtm+OWNVxpXOGvuIEZoHjBM=,tag:EhY82NABmQ36ADUikDv+uA==,type:str]
    pgp:
        - created_at: "2024-06-21T23:44:20Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAhAHLsl7+eJYIiF63xsGICayfJpphwyE3kGnq1O+v/L7a
[...]
            =+Aj7
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
