apps/iot/esphome/overlays/iot/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:CxtFlzgbEALQC60z3GRcqupPbhMpsw==,iv:TOiajMOE/Zd9Deh+XS0RUyRHEFkUbHqqB669ZiY+oqQ=,tag:6yQkUceyCZeRF4V2TxVflQ==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: esphome
    name: esphome
    namespace: iot
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:pJ3//mtw5xSZzA7FOG/Bipl8yo3qgOEuOJihkoK4wUaPAQLLnyA=,iv:58wl7/xgEc1PqLJg8Qkn1JCx03DspdTxIo+EF6QD5S4=,tag:3GehzsVJYeNRcotevjQ6Uw==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: esphome
              port: 6052
    tls:
        domains:
            - main: ENC[AES256_GCM,data:TDeSUvE50bEWVqbRickV0QAN+PiS6A==,iv:EDSssnJWuW2Sxc8uXI3fHrSqFdtTrNk1UnHdXrl1A0w=,tag:fCuSrycXwp8v+NkvUopIUA==,type:str]
              sans:
                - ENC[AES256_GCM,data:j8aUgr/B+uYIuv5SI2vFmNUXC/AYn0k=,iv:ja4EmbdjbOIM/jEp29IMYTDbkyLt5qVCHY+hz+0hom4=,tag:ygp4hNLsu/kE5wbIonGyJQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: esphome-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmbmtwcGhHaXpCblZ6eXZE
[...]
            WHygWmgRwftIKXk9YTjZ0Uey9OI33BQrmXMRE0OC+UY6BRJyQybCbA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-22T19:53:06Z"
    mac: ENC[AES256_GCM,data:tIZlmIJ3AF85sC5MUt3RgDrVTqPB3Z3YTG0ogsO+fXQSYLViGS0bL6Gf4bhTXnizcBsZTpwrbqkjcDzehzUT/OCWn8MKMlNk6y50wYqNpihsuYItCB1bfhFPYF9JrfpB2E9BOL9DaOKCTmdILNI7zbkNUmETJYfLRP3gUzIOrNk=,iv:GptssgfHsNq12rwl8/9VxDTsNwoew26HXMWSHXixDB8=,tag:Y+mLJdPxC44GO/lNtHutmg==,type:str]
    pgp:
        - created_at: "2024-06-22T19:53:06Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/9Efcf+fWsyRJTF40tnnadt6N4MeIrTHvhAMZ6TCTtTtCj
[...]
            =Bu0i
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
