apps/iot/esphome/overlays/iot/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/sync-wave: "10"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:eBrLZ+hqtPvOU5JiawUZ/wMhW7LcPw==,iv:a5Qlvccy6Ly+UQH3HdrdHrryv/aaqXWQpUd9cqpXcF4=,tag:2M5lmbRG10fv23k5Rn2MNA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: esphome
    name: esphome
    namespace: iot-k3s
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:GbEiZn6O0bp9tZBmxTj5QK/ChG8UoPJMoETSrSNHY3Z/2Raor9w=,iv:q15K96J7/fKzRCiE4cNuMc3qWpgcK4SyUVZ4fgE22BQ=,tag:ao0DBHm+8xCb4E4v0VlHrQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: esphome
              port: 6052
    tls:
        domains:
            - main: ENC[AES256_GCM,data:XZZYVbZxHgjXDayMnpP6gQqNLHwpAQ==,iv:TN9YNHBnYMx657VcbGbSIP6Ra+GK0iabXJd+MubpNDE=,tag:QyVUm6RyVs/mMrERHK8D8Q==,type:str]
              sans:
                - ENC[AES256_GCM,data:y+BHK9kWtYKfv1VU1ElhSFgJexeHQqM=,iv:B+bExebRt9cz6tJp+TInF5ckvWg7vSVmz649MVYVX4g=,tag:1P7EkgX+Ir2+aZqTQn2IKQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: esphome-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4MjJ5QkZEK1NtZlNVZ0V0
[...]
            uuk0BS5kb/chNLMBalzKpACoS+moXZANRfaFQ3HF/tbxGQNZi02TKg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:44:36Z"
    mac: ENC[AES256_GCM,data:5xFbMob82F1DGCpOnULiR1dW8zL29JqP+Y/UT0FACwdc0kvdT4jGnNm0Dd6entFwNa0BYO+VIM+RTv8xJrY3RPnh//seB6qyvo1D6KHxKmlrP+POvf9eOAhH8Jibp5QBgUPJVk1h1kcABLyn9CNh185pdY3RM8uM4bnc1Iy3k5I=,iv:p69B4mpeZy/128JWWSBedcDytH7gbz4gjOG3/CYzYoo=,tag:HuUlz9L3m3ZoP7wsNwH6xg==,type:str]
    pgp:
        - created_at: "2024-06-21T23:44:36Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+KTKVHuh04ZZCxw5QJCJrRTPlHkax2bpHdg0z6l7pV1gw
[...]
            =MXfM
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
