apps/iot/esphome/overlays/iot/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "10"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: iot.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: esphome
  name: esphome
  namespace: iot-k3s
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`esphome.iot.anotherlife.org.pl`)
    middlewares:
    - name: chain-traefik-dashboard
      namespace: traefik
    services:
    - kind: TraefikService
      name: esphome
      port: 6052
  tls:
    domains:
    - main: iot.anotherlife.org.pl
      sans:
      - .iot.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-iot
